[gd_scene load_steps=4 format=3 uid="uid://b8gtluttwaif0"]

[ext_resource type="PackedScene" uid="uid://typtpmure35" path="res://ui/keypad.tscn" id="1_fblgx"]
[ext_resource type="Script" uid="uid://ltowfmb7yhf1" path="res://ui/main.gd" id="1_vcrq8"]
[ext_resource type="Script" uid="uid://durukf7ksv00x" path="res://ui/converter.gd" id="2_loxbi"]

[node name="Main" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vcrq8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="Converter" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
script = ExtResource("2_loxbi")

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/Converter"]
layout_mode = 2

[node name="InputUnits" type="OptionButton" parent="MarginContainer/Converter"]
unique_name_in_owner = true
layout_mode = 2

[node name="InputValue" type="LineEdit" parent="MarginContainer/Converter"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 0.5
alignment = 2
virtual_keyboard_enabled = false
flat = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/Converter"]
layout_mode = 2

[node name="OutputUnits" type="OptionButton" parent="MarginContainer/Converter"]
unique_name_in_owner = true
layout_mode = 2

[node name="OutputValue" type="LineEdit" parent="MarginContainer/Converter"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 0.5
alignment = 2
editable = false
virtual_keyboard_enabled = false
flat = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Converter"]
layout_mode = 2

[node name="Keypad" parent="MarginContainer/Converter" instance=ExtResource("1_fblgx")]
layout_mode = 2
size_flags_vertical = 3

[connection signal="item_selected" from="MarginContainer/Converter/InputUnits" to="MarginContainer/Converter" method="_on_input_units_item_selected"]
[connection signal="item_selected" from="MarginContainer/Converter/OutputUnits" to="MarginContainer/Converter" method="_on_output_units_item_selected"]
[connection signal="backspace_pressed" from="MarginContainer/Converter/Keypad" to="MarginContainer/Converter" method="_on_keypad_backspace_pressed"]
[connection signal="clear_pressed" from="MarginContainer/Converter/Keypad" to="MarginContainer/Converter" method="_on_keypad_clear_pressed"]
[connection signal="dot_pressed" from="MarginContainer/Converter/Keypad" to="MarginContainer/Converter" method="_on_keypad_dot_pressed"]
[connection signal="number_pressed" from="MarginContainer/Converter/Keypad" to="MarginContainer/Converter" method="_on_keypad_number_pressed"]
[connection signal="swap_pressed" from="MarginContainer/Converter/Keypad" to="MarginContainer/Converter" method="_on_keypad_swap_pressed"]
